--- a/Altkom.UTC.Core.Service/appsettings.json
+++ b/Altkom.UTC.Core.Service/appsettings.json
@@ -4,5 +4,19 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "MyConnection": "Server=(local)\\SQLEXPRESS"
+  },
+
+  "Quantity": 200,
+
+  "MyComplexOptions": {
+    "MyOption1": "Hello",
+    "MyOption2": "Foo"
+  },
+
+
+  "Foo": "Boo"
 }
