--- a/Altkom.UTC.Core.Service/Properties/launchSettings.json
+++ b/Altkom.UTC.Core.Service/Properties/launchSettings.json
@@ -27,7 +27,7 @@
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     },
     "Docker": {
-      "commandName": "Docker",
+      "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/api/values"
     }
