--- a/Altkom.UTC.Core.Service/appsettings.json
+++ b/Altkom.UTC.Core.Service/appsettings.json
@@ -7,7 +7,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "MyConnection": "Server=(local)\\SQLEXPRESS"
+    "MyConnection": "Data Source=(local)\\MSSQLLocalDb;Initial Catalog=UTCDb;Integrated Security=true"
   },
 
   "Quantity": 200,
