--- a/Altkom.UTC.Core.Service/appsettings.json
+++ b/Altkom.UTC.Core.Service/appsettings.json
@@ -7,7 +7,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "MyConnection": "Data Source=(local)\\MSSQLLocalDb;Initial Catalog=UTCDb;Integrated Security=true"
+    "MyConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=UTCDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
 
   "Quantity": 200,
