--- a/Altkom.UTC.Core.Service/appsettings.json
+++ b/Altkom.UTC.Core.Service/appsettings.json
@@ -22,5 +22,17 @@
   },
 
 
-  "Foo": "Boo"
+  "Foo": "Boo",
+
+  "HealthChecks-UI": {
+    "HealthChecks": [
+      {
+        "Name": "Http and UI on single project",
+        "Uri": "http://localhost:5000/health"
+      }
+    ],
+    "Webhooks": [],
+    "EvaluationTimeOnSeconds": 10,
+    "MinimumSecondsBetweenFailureNotifications": 60
+  }
 }
